crates/iroha_data_model_derive/tests/ui_fail/transparent_api_private_field.stderr
error[E0616]: field `signatory` of struct `AccountId` is private
  --> tests/ui_fail/transparent_api_private_field.rs:20:35
   |
20 |     println!("ID: {}", account_id.signatory);
   |                                   ^^^^^^^^^ private field
